--- a/public/style.css
+++ b/public/style.css
@@ -53,13 +53,6 @@ form div {
   margin: 0.5em 0 0 0;
 }
 
-.audio-feature-track-details {
-  display: flex;
-  flex: auto;
-  flex-direction: column;
-  margin: 0.5em;
-}
-
 .audio-feature-settings {
   display: flex;
   flex-direction: row;
@@ -69,6 +62,17 @@ form div {
   display: flex;
   flex-direction: column;
   margin: 0.5em 0.5em 0.5em 0;
+}
+
+.audio-feature-track-details {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  margin: 0.5em;
+}
+
+.audio-feature-track-details div {
+  margin: 0 0 0.5em 0;
 }
 
 .selected-track-main {
