Woring on css still

--- a/public/style.css
+++ b/public/style.css
@@ -88,8 +88,13 @@ form div {
 
 .topSongs {
   margin: 3% 3% 0% 3%;
+  background-color: #ffffff24;
 }
 
 .foreignDiv {
   margin-top: -6%;
+}
+
+.top-song-list {
+  margin-bottom: 0px !important;
 }
