--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,10 @@ form div {
   display: inline-block;
 }
 
+p div h1 h2 h3 h4 h5 h6 a {
+  color: hsl(0, 0%, 96%);
+}
+
 /* #top-level-page {
   display: flex;
   flex-direction: row;
