--- a/public/style.css
+++ b/public/style.css
@@ -91,9 +91,10 @@ a {
   margin-bottom: 1rem;
 }
 
-.card {
+.artist-card {
   margin-bottom: 1%;
   max-width: 75%;
+  box-shadow: 0 0.5em 1em -0.125em #f5f5f524, 0 0 0 1px #f5f5f51c;
 }
 
 .svg-sunburst {
@@ -113,4 +114,8 @@ a {
 .image.is-square.test img {
   width: 10%;
   height: 10%;
+}
+
+.menu-list a:hover {
+  background-color: hsl(0, 0%, 29%);
 }
