--- a/public/style.css
+++ b/public/style.css
@@ -129,6 +129,10 @@ a {
   color: hsl(0, 0%, 96%);
 }
 
-#navbarBasicExample {
+#navBarHasMobileView {
   background-color: #0a0a0a;
+}
+
+.navbar-item .buttons {
+  margin-bottom: 0;
 }
